[project]
name = "argybargy"
version = "1.0.0"
description = "A peer-to-peer bridge that connects 1↔N AI agents and sessions over a REST API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Topic :: Communications :: Chat",
]

[project.scripts]
argybargy = "argybargy.cli:main"

[project.optional-dependencies]
test = ["httpx>=0.27", "pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["argybargy"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008: FastAPI uses Depends()/Query() in argument defaults. E731: terse test lambdas.
ignore = ["E501", "B008", "E731"]
